I drew borders around some elements to see what's happening more clearly.  I'm trying to fix the logo alignment and the anchor tag spacing, etc... I also have to change the element widths.

--- a/css/about.css
+++ b/css/about.css
@@ -79,11 +79,28 @@ p {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
-.
+.navigation {
+    border: 1px solid red;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.lambda-logo {
+
+    border: 1px solid red;
+}
+a {
+    border: 1px solid red;
+}
+nav {
+    border: 1px solid red;
+}
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
+    vertical-align: center;  
 }
 
 .middle-content {
